cmake_minimum_required(VERSION 3.9)
project(yanan_de_c_xiangmu)

set(CMAKE_CXX_STANDARD 11)

add_executable(x a.c)
add_executable(y a1.c)
add_executable(z hello.c)
add_executable(gamma char.c)
add_executable(l c.c)
add_executable(m char2.c)
add_executable(n exercise1-8.c)
add_executable(a 1-9.c)
add_executable(b 1-10.c)
add_executable(c 1-8s.cpp)
add_executable(d putchar.c)
add_executable(e static.cpp)
add_executable(f 1_11.cpp)
add_executable(g 1_11.c)
add_executable(h sizeof.cpp)
add_executable(i 1.cpp)
add_executable(k goto.cpp)
add_executable(sort  sort.c )
add_executable(cpointer cpointer.c)